test/corpus/parse_errors.txt
=====================================
Stray dot after variable name (no type)
=====================================

var invalid_variable .

func next():
	pass

---

(source
  (ERROR
    (variable_statement
      (name)))
  (function_definition
    (name)
    (parameters)
    (body
      (pass_statement))))

=====================================
Stray dot after type annotation
=====================================

var invalid_variable: bool .

---

(source
  (ERROR
    (name)
    (identifier)))
